# obs-studio

plugins/obs-vkvideo/: CMakeLists.txt  obs-vkvideo.c
